# ext-theme

./: .djlint_rules.yaml  .djlintrc  .gitignore  .npmrc  .pre-commit-config-local.yaml  .pre-commit-config.yaml  .prettierignore  .readthedocs.yaml  AGENTS.md  MANIFEST.in  README.rst  crowdin.yml  manage.py  package-lock.json  package.json  setup.cfg  setup.py  tox.ini  web-test-runner.config.mjs  webpack.common.js  webpack.config.js  webpack.config.mjs  webpack.dev.js
.circleci/: config.yml
.github/: CODEOWNERS
.github/skills/ext-theme-frontend/: SKILL.md
.github/skills/ext-theme-frontend/references/: django-templates.md  fomantic-ui.md  knockoutjs.md
.pre-commit/: check-build-assets.sh
docs/: .readthedocs.yml  conf.py  docext.py  examples.rst  index.rst  introduction.rst  javascript.rst  jsdoc.json  jsdocko.js  jsdocko.mjs  phase-i.rst  phase-ii.rst  resources.rst  stylesheets.rst  templates.rst
docs/_templates/: page.html
docs/api/: javascript.rst  stylesheets.rst  templates.rst
docs/api/js/: application.rst  plugins.rst  views.rst  webcomponents.rst
readthedocsext/: __init__.py
readthedocsext/theme/: __init__.py  apps.py  loaders.py  middleware.py  urls.py  views.py
readthedocsext/theme/settings/: test.py
readthedocsext/theme/templates/: 403_csrf.html  all_builds.html  base-ng.html  base.html  base_filter.html  error_header.html  homepage.html  support.html
readthedocsext/theme/templates/account/: base.html  base_reauthenticate.html  email.html  email_confirm.html  login.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  reauthenticate.html  saml.html  signup.html  verification_sent.html
readthedocsext/theme/templates/acl/: shared_password_required.html
readthedocsext/theme/templates/archive/: index.html
readthedocsext/theme/templates/builds/: build_detail.html  build_list.html  tag_list.html  (+3 more)
readthedocsext/theme/templates_provisional/: base.html  homepage.html
readthedocsext/theme/templatetags/: alter_field.py  ext_theme_tags.py
src/css/: config.less  dark.less  main.less  site.less
src/css/components/: badge_markup.less  buttons.less  footer.less  forms.less  header.less  highlight.less  home_header.less  popup.less  site.less  sui_defaults.less  table.less  utilities.less  wide_search_bar.less
src/css/pages/: dashboard.less  project_detail.less
src/js/: dummy.js  main.js  site.js
src/js/account/: index.js
src/js/application/: elements.js  globals.js  index.js  plugins.js  registry.js  views.js
src/js/core/: index.js  utils.js  views.js
src/js/docs/: index.js
src/js/gold/: index.js
src/js/migrate_to_github_app/: index.js
src/js/modules/: avatar.js  filter.js  footer.js  forms.js  header.js  index.js  menus.js  notifications.js  popupcards.js
src/js/organization/: index.js
src/js/profile/: index.js
src/js/project/: admin.js  create.js  index.js
src/js/tasks/: index.js
src/js/tests/: application.test.js
src/sui/: theme.config  theme.less
src/theme/: theme.config
(+422 files in other folders)
