[metadata]
name = readthedocsext-theme
version = 1.0.0
license = MIT
description = Read the Docs next generation theme author = Read the Docs, Inc
author_email = dev@readthedocs.com
url = http://readthedocs.org
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Framework :: Django

[options]
packages = find:
namespace_packages = readthedocsext
include_package_data = True
zip_safe = False
install_requires =
    Django
    crispy-forms-semantic-ui

[options.extras_require]
docs =
    Sphinx~=7.2
    sphinx_rtd_theme~=2.0.0
    sphinxcontrib-autoanysrc>=0.1.1
    sphinx-js~=3.2.1
